# AutoForge-Autonomous-Coding-Agent-Scaffold

./: .coverage  .gitignore  MEMO.md  README.md  autoforge.db  pyproject.toml
autoforge/: __init__.py  config.py  exceptions.py  persistence.py
autoforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autoforge/agent/: runtime.py
autoforge/api/: app.py
autoforge/evals/: __init__.py  harness.py
autoforge/executor/: __init__.py  executor.py
autoforge/llm/: agent.py  base.py  client.py  gemini.py  planner.py  router.py
autoforge/memory/: manager.py
autoforge/models/: __init__.py  agent.py  evals.py  plans.py  tasks.py  tools.py
autoforge/planner/: __init__.py  planner.py
autoforge/subagents/: __init__.py  base.py  tool.py
autoforge/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
autoforge/tools/: __init__.py  common.py  execution.py  filesystem.py  git.py  planning.py  quality.py  registry.py  research.py
examples/: example_evals.json  sample_trace.json
tests/: test_api_evals.py  test_runtime.py  test_tools.py
